Revision history for {{$dist->name}}

{{$NEXT}}

0.02      2021-05-31 05:48:05 -0600
  - Work around possible bug in Perl stat function
    in test suite (gh#5, gh#6)

0.01      2021-05-27 16:41:08 -0600
  - initial version

