@@ -2,7 +2,7 @@ name             = FFI-C-Stat
 author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
-copyright_year   = 2021-2022
+copyright_year   = 2021-2023
 version          = 0.02
 
 [@Author::Plicease]
